--- a/index.html
+++ b/index.html
@@ -2,56 +2,134 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tea House</title>
-    <!-- tailwind css -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tea House</title>
+  <!-- tailwind css -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- font awesome -->
-    <script src="https://kit.fontawesome.com/ef2d27c51b.js" crossorigin="anonymous"></script>
-    <!-- murqupe google font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-    <style>
-        .font-monrope{
-            font-family: "Manrope", sans-serif;
-        }
-    </style>
+  <!-- font awesome -->
+  <script src="https://kit.fontawesome.com/ef2d27c51b.js" crossorigin="anonymous"></script>
+  <!-- murqupe google font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+  <style>
+    .font-monrope {
+      font-family: "Manrope", sans-serif;
+    }
+  </style>
 </head>
 
 <body class="font-monrope">
-    <header class="container mx-auto"> 
-          <div class="hero ">
-            <div class="hero-content flex-col lg:flex-row">
-              <div class="space-y-5">
-                <h2 class="text-5xl font-extrabold">
-                  It's good <br>
-                  tea time at The <br>
-                  Tea House</h2>
-                  <p>Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
-                  <button class="btn btn-primary">Explore More</button>
-              </div>  
-              <div> 
-              <img src="images/banner.png" class="max-w-sm" />
-              <div class="flex gap-4 p-5 drop-shadow-lg items-center -mt-14	bg-white w-64 rounded">
-                <div>
-                  <i class="fa-solid fa-star text-4xl text-amber-400"></i>
-                </div>
-                <div>
-                  <h1 class="text-2xl font-bold">5.00</h1>
-                  <p>Trust Pilot Ratings</p>
-                </div>
-              </div>
-              </div>
-             
+  <header class="container mx-auto">
+    <div class="hero ">
+      <div class="hero-content flex-col lg:flex-row">
+        <div class="space-y-5">
+          <h2 class="text-5xl font-extrabold">
+            It's good <br>
+            tea time at The <br>
+            Tea House</h2>
+          <p>Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
+          <button class="btn bg-gradient-to-r from-orange-400 to-red-600 text-[#FFFFFF]">Explore More <span><i
+                class="fa-solid fa-arrow-right"></i></span></button>
+        </div>
+        <div>
+          <img src="images/banner.png" class="max-w-sm" />
+          <div class="flex gap-4 p-5 drop-shadow-lg items-center -mt-14	bg-white w-64 rounded">
+            <div>
+              <i class="fa-solid fa-star text-4xl text-amber-400"></i>
+            </div>
+            <div>
+              <h1 class="text-2xl font-bold">5.00</h1>
+              <p>Trust Pilot Ratings</p>
             </div>
           </div>
-    </header>
-    <main></main>
-    <footer></footer>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <main class="container mx-auto">
+    <section >
+      <div class="text-center mt-20 space-y-3">
+        <h1 class="text-5xl font-extrabold mb-5">Our Featured Products</h1>
+        <p class="w-[900px] mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+          some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+      </div>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 p-14">
+        <div class="card drop-shadow-lg	bg-gray-100">
+          <figure class="px-10 pt-10">
+            <img src="./images/tea-1.png" alt="Shoes" class="rounded-xl" />
+          </figure>
+          <div class="card-body ">
+            <h2 class="text-2xl font-bold text-center">Milk Tea</h2>
+            <p class="text-center">Creamer could be replaced by fresh milk?</p> 
+          </div>
+        </div>
+        <div class="card drop-shadow-lg	bg-gray-100">
+          <figure class="px-10 pt-10">
+            <img src="./images/tea-2.png" alt="Shoes" class="rounded-xl" />
+          </figure>
+          <div class="card-body ">
+            <h2 class="text-2xl font-bold text-center">Black Tea</h2>
+            <p class="text-center">Creamer could be replaced by fresh milk?</p> 
+          </div>
+        </div>
+        <div class="card drop-shadow-lg	bg-gray-100">
+          <figure class="px-10 pt-10">
+            <img src="./images/tea-3.png" alt="Shoes" class="rounded-xl" />
+          </figure>
+          <div class="card-body ">
+            <h2 class="text-2xl font-bold text-center">Lemon Tea</h2>
+            <p class="text-center">Creamer could be replaced by fresh milk?</p> 
+          </div>
+        </div>
+        <div class="card drop-shadow-lg	bg-gray-100">
+          <figure class="px-10 pt-10">
+            <img src="./images/tea-4.png" alt="Shoes" class="rounded-xl" />
+          </figure>
+          <div class="card-body">
+            <h2 class="text-2xl font-bold text-center">Green Tea</h2>
+            <p class="text-center">Creamer could be replaced by fresh milk?</p> 
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--  Featured Section end here -->
+
+    <section class="py-12 flex flex-col lg:flex-row p-12 gap-16">
+      <div class="grid gap-5  grid-cols-1 md:grid-cols-2 flex-1">
+        <div class="rounded-lg h-36 bg-gradient-to-r from-red-100 to-red-50">
+
+        </div>
+        <div class="row-span-2 bg-gradient-to-r from-orange-100 to-orange-50 rounded-lg flex justify-center items-center py-8">
+          <img class="" src="./images/fresh-1.png" alt="">
+        </div>
+        <div class="row-span-2 bg-gradient-to-r from-slate-200 to-stone-100 rounded-lg flex justify-center items-center py-8">
+          <img src="./images/fresh-2.png" alt="">
+        </div>
+        <div class="bg-gradient-to-r from-zinc-200 to-zinc-50 rounded-lg h-28">
+
+        </div>
+      </div>
+      <div class="space-y-5 flex-1">
+        <h1 class="text-5xl font-extrabold ">
+          Great Tea, Freshly 
+          <br>Presented
+        </h1>
+        <p>
+          The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.
+        </p>
+        <h2 class="text-2xl font-bold">Unique Taste</h2>
+        <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+        <h2 class="text-2xl font-bold">Premium Quality</h2>
+        <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+      </div>
+    </section>
+  </main>
+  <footer></footer>
 </body>
 
 </html>
